updated Czech translation

--- a/po/wesnoth-aoi/cs.po
+++ b/po/wesnoth-aoi/cs.po
@@ -6,9 +6,9 @@
 #
 # Czech Wesnoth translation team <wesnoth-cs-l@nospam.buchtovi.cz>,
 #
-# Anežka Bubeníčková <masozravapalma@gmail.cz>, 2006.
+# Anežka Bubeníčková <masozravapalma@gmail.cz>, 2006, 2011.
 # Oto 'tapik' Buchta <tapik@buchtovi.cz>, 2006.
-# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2009.
+# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2007 - 2011.
 # Čestmír "CZestmyr" Houska <czestmyr@gmail.com>, 2008.
 #
 msgid ""
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2010-03-17 19:31+0100\n"
+"PO-Revision-Date: 2011-11-28 18:50+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -102,12 +102,12 @@ msgstr "Práce na příběhu a herní vylepšení"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Kresby a design"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
 msgid "Editing, proofreading and gameplay testing"
-msgstr "Edice, korektury a testování"
+msgstr "Editace, korektury a testování"
 
 #. [scenario]: id=01_Defend_the_Forest
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:9
@@ -358,9 +358,8 @@ msgstr "Lorde!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
-msgstr "Splňte... rozkaz... vytlačte je... pryč."
+msgstr "Splňte... rozkaz... Vytlačte je... pryč."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:220
@@ -373,13 +372,12 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
 "may he wipe your people from the face of this earth!"
 msgstr ""
-"Byl jsem poražen, ale v nečestné bitvě... tisíceré kletby na tebe, ty "
+"Byl jsem poražen, ale v nečestné bitvě... Tisíceré kletby na tebe, ty "
 "prachbídný zbabělče! Doufám že budeš trpět... a až tě můj pán, Rualša, "
 "najde, nechť smete tvůj lid z tváře této země!"
 
@@ -388,7 +386,7 @@ msgstr ""
 msgid ""
 "Rualsha? Hmm... What if... Assemble a war-party, we need to scout north!"
 msgstr ""
-"Rualša? Hm... co když... shromážděte vojsko, musíme jít na průzkum na sever!"
+"Rualša? Hm... Co když... Shromážděte vojsko, musíme jít na průzkum na sever!"
 
 #. [scenario]: id=02_Assassins
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:9
@@ -407,7 +405,7 @@ msgid ""
 "trampled ground through violated forest. Erlornas and his party swiftly "
 "followed it north and west."
 msgstr ""
-"Trasu skřetí válečné tlupy bylo snadné sledovat - širokou průrvu škaredé, "
+"Trasu skřetí válečné tlupy bylo snadné sledovat — širokou průrvu škaredé, "
 "udusané země, táhnoucí se skrz zpustošený les. Erlornas a jeho družina po ní "
 "rychle postupovali na severozápad."
 
@@ -465,21 +463,18 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
-msgstr "Až skončí boje, budu znát pár odpovědí. Ale zatím..."
+msgstr "Až skončí boje, budu znát pár odpovědí. Ale zatím—"
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
-msgstr "Gharlša vidět elfy... jiště... čerstvý maso pro vlky. Jiště, jiště..."
+msgstr "Gharlša vidět elfy... jiště... Čerstvý maso pro vlky. Jiště, jiště..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
-msgstr "...se soustřeďme na úkol před námi."
+msgstr "— se soustřeďme na úkol před námi."
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:150
@@ -493,19 +488,16 @@ msgstr "Zdání může klamat. Řekni mužům, ať jsou ostražití."
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
-msgstr "Jiště... jiště... vražďte je!"
+msgstr "Jiště... jiště... Zabít!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
 msgstr "To bolí... poražen... Rualša bude zuřit..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
@@ -515,13 +507,12 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
-#, fuzzy
 msgid ""
 "Destroy this place and let the forest take the ruins. We don’t want any more "
 "undesirables to use it."
 msgstr ""
-"Zničte toto místo a nechte les ujmout se ruin. Nechceme, aby bylo nadále "
-"užíváno nežádoucími."
+"Zničte toto místo a nechte les překrýt ruiny. Nechceme, aby bylo nadále "
+"užíváno vetřelci."
 
 #. [scenario]: id=03_Wasteland
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:9
@@ -544,7 +535,7 @@ msgid ""
 msgstr ""
 "Jak postupovali na sever, lesní zeleně okolo ubývalo, až ustoupila nevlídné, "
 "pusté zemi. Pařezy, sem tam napůl shnilé dávno pokácené stromy a mrtvý les "
-"porostlý řídkou zelení - to vše vysílalo jasná a neomylná znamení. Zde dříve "
+"porostlý řídkou zelení — to vše vysílalo jasná a neomylná znamení. Zde dříve "
 "rostl les, tak jako v místech, co nazývali domovem. Nyní však byl mrtvý, "
 "zabitý."
 
@@ -561,7 +552,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -571,9 +561,9 @@ msgid ""
 msgstr ""
 "Erlornas si byl téměř jistý, že tam natrefí na skřety. Žádný trpasličí klan "
 "by takto neporušil své pradávné smlouvy s elfy; lidé zase nebyli ve svém "
-"ničení tak...metodičtí a necestovali v dostatečně hojných množstvích severní "
-"krajinou, již shledávali příliš chladnou a vlhkou. Velkým otazníkem "
-"zůstávalo - najde Rualšu?"
+"ničení tak... metodičtí a necestovali v dostatečně hojných množstvích "
+"severní krajinou, již shledávali příliš chladnou a vlhkou. Velkým otazníkem "
+"zůstávalo — najde Rualšu?"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:72
@@ -593,7 +583,7 @@ msgid ""
 "hit-and-run tactics to weaken enemy units who cannot heal themselves."
 msgstr ""
 "Tip:\n"
-"Na této mapě nejsou žádné vesnice - musíš místo nich použít léčitele. Použij "
+"Na této mapě nejsou žádné vesnice — musíš místo nich použít léčitele. Použij "
 "taktiku „udeř a uteč“ k oslabení nepřátelských jednotek, které se nemohou "
 "léčit."
 
@@ -654,25 +644,22 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
-msgstr "Vyhrál jsi... Elfe... Ale to nic... Nemění... (*kašle*)"
+msgstr "Vyhrál jsi... elfe... Ale to nic... nemění... (<i>kašle</i>)"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
-"Našli jsme cestu... Teď... Budou nás přicházet spousty... (*kašle*) Neumíš "
-"si představit..."
+"Našli jsme cestu... Teď... nás budou přicházet spousty... (<i>kašle</i>) "
+"Neumíš si představit..."
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
-msgstr "(*kašle*) Budu čekat... Mezi mrtvými..."
+msgstr "(<i>kašle</i>) Budu čekat... mezi mrtvými..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -1061,9 +1048,9 @@ msgid ""
 "some cavalry support. When they attempted the pass again, they found not "
 "trolls but something worse — an orcish army approaching from the north."
 msgstr ""
-"Posily dorazily o pár dní později - hrstka lučištníků s trochou jízdní "
+"Posily dorazily o pár dní později — hrstka lučištníků s trochou jízdní "
 "podpory. Když se znova pokusili o průsmyk, našli nejen trolly, ale něco "
-"horšího - skřetí armádu, která se blížila ze severu."
+"horšího — skřetí armádu, která se blížila ze severu."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:341
@@ -1152,7 +1139,6 @@ msgstr "Hlášení."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
@@ -1207,7 +1193,6 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
@@ -1217,9 +1202,8 @@ msgstr ""
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
-msgstr "... sklenice?"
+msgstr "... Sklenice?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1258,7 +1242,6 @@ msgstr "Po nějaké době..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
@@ -1313,11 +1296,10 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Erlornasi, běda, zklamal jsem..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
@@ -1443,15 +1425,14 @@ msgstr "Poraz Rualšu"
 
 #. [message]: speaker=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:222
-#, fuzzy
 msgid ""
 "My lord! We have ridden hard for over a week to catch up with you! The "
 "Ka’lian has deliberated, and asks you to defeat Rualsha quickly before he "
 "can muster a full invasion force."
 msgstr ""
-"Můj pane! Hnali jsme koně přes týden, abychom tě dohnali! Rada se usnesla a "
-"žádá tě, abys porazil rychle Rualšu, dříve než stihne shromáždit plnou "
-"útočnou sílu."
+"Můj pane! Hnali jsme koně přes týden, abychom tě dohnali! Rada Ka’lian se "
+"usnesla a žádá tě, abys porazil Rualšu rychle, dříve než stihne shromáždit "
+"plnou útočnou sílu."
 
 #. [message]: speaker=Rualsha
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:226
